[package]
name = "rust-avr"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "RustAVR"
path = "Source/Main.rs"
bench = false
test = false

[dependencies]
arduino-hal = { git = "https://github.com/Rahix/avr-hal", rev = "f84c0dff774c2292bc932b670955165161ecc7d1", features = ["arduino-uno"] }
embedded-hal = "0.2.3"
nb = "0.1.2"
panic-halt = "0.2.0"
ufmt = "0.1.0"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
